<resources>
    <string name="app_name">Marvelzomg</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="characters">Characters</string>
    <string name="character">Character</string>
    <string name="character_name">Character Name</string>
    <string name="description">Description</string>
    <string name="character_image">Character image</string>
    <string name="search_with_character_name">Character name</string>
    <string name="search">Search</string>
    <string name="series">Series</string>
    <string name="searchSeriesName">Search series name</string>
    <string name="search_with_series_name">Search with series name</string>
    <string name="series_name">Series name</string>
    <string name="series_description">Description</string>
    <string name="menu">Menu</string>
    <string name="users">Users</string>
    <string name="logout">Logout</string>
    <string name="favorite">+/- FAVORITES</string>
    <string name="favoriteHeader">Favorite Characters</string>
</resources>
