<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_menu"
            android:title="@string/menu"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_favorites"
            android:title="@string/favorite" />
    <item
            android:id="@+id/action_character"
            android:title="@string/character" />
    <item
            android:id="@+id/action_series"
            android:title="@string/series" />
    <item
            android:id="@+id/action_users"
            android:title="@string/users" />
    <item
            android:id="@+id/action_logout"
            android:title="@string/logout" />
</menu>