<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:text="@string/characters"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="37dp" android:textSize="18sp" android:id="@+id/textView"
            android:layout_marginBottom="19dp" app:layout_constraintBottom_toTopOf="@+id/characterListView"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/characterListView"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="136dp"
            android:layout_height="51dp"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/characterListView"
            app:layout_constraintEnd_toStartOf="@+id/searchButtonCharacterName" android:layout_marginEnd="8dp"
    >

        <android.support.design.widget.TextInputEditText
                android:layout_width="144dp"
                android:layout_height="39dp"
                android:hint="@string/search_with_character_name" android:id="@+id/searchCharacterName"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchButtonCharacterName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/characterListView" android:textSize="12sp"
            android:onClick="searchByName"/>

</android.support.constraint.ConstraintLayout>